[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/GameOver.gd" type="Script" id=3]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -55.0
margin_right = 146.0
margin_bottom = 55.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 53.0
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 292.0
margin_bottom = 126.0
text = "Back to Main Menu"
[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
